Finalização do html do Slide

--- a/src/pages/intro/intro.html
+++ b/src/pages/intro/intro.html
@@ -6,19 +6,38 @@
 -->
 
 
-
+<ion-content padding>
   <ion-slides pager>
 
-    <ion-slide style="background-color: green">
+    <ion-slide class="slide_image">
+        <img src="assets/imgs/slide1.png" alt="Slide 1">
       <h2>Slide 1</h2>
+      <br/>
+      <div class="slide_texto">
+          <p>Conheça o nosso serviço de entrega</p> 
+          <p>Nova experiência com o usuário, fácil de manipular, aproveite, é <strong>GRÁTIS</strong></p>
+      </div>
     </ion-slide>
 
-    <ion-slide style="background-color: rgb(200, 255, 0)">
+    <ion-slide class="slide_image">
+        <img src="assets/imgs/slide2.png" alt="Slide 2">
       <h2>Slide 2</h2>
+      <br/>
+      <div class="slide_texto">
+       <p>Rápido e Prático</p> 
+       <p>Ficou Curioso?</p><strong> Acesse agora mesmo</strong>
+      </div>
     </ion-slide>
 
-    <ion-slide style="background-color: red">
+    <ion-slide class="slide_image">
+        <img src="assets/imgs/slide3.png" alt="Slide 3">
       <h2>Slide 3</h2>
+      <br/>
+      <div class="slide_texto">
+          <p>Viva essa nova experiência</p>
+          <p>Ficou Curioso?</p><strong> Acesse agora mesmo</strong>
+      </div>
     </ion-slide>
-
+  
   </ion-slides>
+</ion-content>
