--- a/src/pages/feed/feed.html
+++ b/src/pages/feed/feed.html
@@ -19,13 +19,13 @@
 
     <ion-item>
       <ion-avatar item-start>
-        <img src="img/marty-avatar.png">
+        <img src="assets/imgs/avatar.png">
       </ion-avatar>
-      <h2>Marty McFly</h2>
+      <h2 class="feed_title">{{ nome_usuario }}</h2>
       <p>November 5, 1955</p>
     </ion-item>
 
-    <img src="img/advance-card-bttf.png">
+    <img src="assets/imgs/feed.png">
 
     <ion-card-content>
       <p>Rock in Rio foi TOP demais, muito bom. Ano que vem estarei lá novamente, com certeza.</p>
