--- a/src/pages/intro/intro.html
+++ b/src/pages/intro/intro.html
@@ -8,6 +8,7 @@
 
 <ion-content padding>
   <ion-slides pager>
+    
 
     <ion-slide class="slide_image">
         <img src="assets/imgs/slide1.png" alt="Slide 1">
@@ -35,7 +36,8 @@
       <br/>
       <div class="slide_texto">
           <p>Viva essa nova experiência</p>
-          <p>Ficou Curioso?</p><strong> Acesse agora mesmo</strong>
+          <p>Ficou Curioso?</p><strong>Acesse agora mesmo</strong>
+        <a (click)="goToTabsPage">Acessar</a>
       </div>
     </ion-slide>
   
