--- a/src/pages/feed/feed.html
+++ b/src/pages/feed/feed.html
@@ -21,32 +21,32 @@
       <ion-avatar item-start>
         <img src="assets/imgs/avatar.png">
       </ion-avatar>
-      <h2 class="feed_title">{{ nome_usuario }}</h2>
-      <p>November 5, 1955</p>
+      <h2 class="feed_title">{{ objeto_feed.titulo_feed }}</h2>
+      <p class="feed_date">{{ objeto_feed.data_feed }}</p>
     </ion-item>
 
     <img src="assets/imgs/feed.png">
 
     <ion-card-content>
-      <p>Rock in Rio foi TOP demais, muito bom. Ano que vem estarei lá novamente, com certeza.</p>
+      <p>{{ objeto_feed.descricao_feed }}</p>
     </ion-card-content>
 
     <ion-row>
       <ion-col>
         <button ion-button icon-left clear small>
           <ion-icon name="thumbs-up"></ion-icon>
-          <div>12 Likes</div>
+          <div>{{ objeto_feed.qtd_likes_feed }}</div>
         </button>
       </ion-col>
       <ion-col>
         <button ion-button icon-left clear small>
           <ion-icon name="text"></ion-icon>
-          <div>4 Comments</div>
+          <div>{{ objeto_feed.qtd_comentario_feed }}</div>
         </button>
       </ion-col>
       <ion-col center text-center>
         <ion-note>
-          11h ago
+          {{ objeto_feed.time_comment_feed }}
         </ion-note>
       </ion-col>
     </ion-row>
