--- a/src/pages/feed/feed.html
+++ b/src/pages/feed/feed.html
@@ -15,20 +15,20 @@
 
 <ion-content padding>
 
-  <ion-card>
+  <ion-card *ngFor = "let filme of lista_filmes">
 
     <ion-item>
       <ion-avatar item-start>
         <img src="assets/imgs/avatar.png">
       </ion-avatar>
-      <h2 class="feed_title">{{ objeto_feed.titulo_feed }}</h2>
-      <p class="feed_date">{{ objeto_feed.data_feed }}</p>
+      <h2 class="feed_title">{{ filme.original_title }}</h2>
+      <p class="feed_date">{{ filme.release_date }}</p>
     </ion-item>
 
-    <img src="assets/imgs/feed.png">
+    <img [src]="'https://image.tmdb.org/t/p/w300/' + filme.backdrop_path">
 
     <ion-card-content>
-      <p>{{ objeto_feed.descricao_feed }}</p>
+      <p>{{ filme.overview }}</p>
     </ion-card-content>
 
     <ion-row>
