--- a/src/pages/intro/intro.html
+++ b/src/pages/intro/intro.html
@@ -37,7 +37,7 @@
       <div class="slide_texto">
           <p>Viva essa nova experiência</p>
           <p>Ficou Curioso?</p><strong>Acesse agora mesmo</strong>
-        <a (click)="goToTabsPage">Acessar</a>
+        <a (click)="goToTabsPage()">Acessar</a>
       </div>
     </ion-slide>
   
