--- a/src/pages/feed/feed.html
+++ b/src/pages/feed/feed.html
@@ -35,7 +35,7 @@
       <ion-col>
         <button ion-button icon-left clear small>
           <ion-icon name="thumbs-up"></ion-icon>
-          <div>{{ objeto_feed.qtd_likes_feed }}</div>
+          <div>{{ filme.vote_average }}</div>
         </button>
       </ion-col>
       <ion-col>
